Change dest directory for update methods.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,9 @@ services:
       - ./source/matrix_stats/env/prod
     command: 'gunicorn matrix_stats.wsgi:application -w 2 -b :8000'
     volumes:
-      - 'mediadata:/media'
       - 'staticdata:/static'
       - 'logsdata:/logs'
+      - 'storagedata:/storage'
     depends_on:
       - postgres 
 
