--- a/docks/nginx/conf.d/web.conf
+++ b/docks/nginx/conf.d/web.conf
@@ -3,6 +3,8 @@
 #     ''        close;
 # }
 
+proxy_cache_path /media/cache levels=1:2 keys_zone=STATIC:10m max_size=1g;
+
 server {
 
     listen 80 default_server;
@@ -48,10 +50,35 @@ server {
         alias /media/;
     }
 
-    location / {
+    location /admin/ {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        break;
+    }
+
+    location /server/ {
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        break;
+    }
+
+    location / {
+        gzip on;
+        gunzip on;
+
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_cache STATIC;
+        proxy_cache_valid 200 1h;
+        proxy_cache_key $request_uri;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+
     }
 }
