--- a/docks/nginx/conf.d/web.conf
+++ b/docks/nginx/conf.d/web.conf
@@ -66,6 +66,14 @@ server {
         break;
     }
 
+    location /rooms/random/ {
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        break;
+    }
+
     location / {
         gzip on;
         gunzip on;
