--- a/docks/nginx/conf.d/web.conf
+++ b/docks/nginx/conf.d/web.conf
@@ -84,7 +84,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
         proxy_cache STATIC;
-        proxy_cache_valid 200 1h;
+        proxy_cache_valid 200 20m;
         proxy_cache_key $request_uri;
         proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
 
