Split tasks to groups. Add groups workers to docker.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - postgres 
       - redis
 
-  celery_worker_default:
+  celery_worker_control:
     image: 'websource'
     environment:
       - C_FORCE_ROOT=true
@@ -57,7 +57,39 @@ services:
       - 'logsdata:/logs'
       - 'storagedata:/storage'
       - 'sockets:/var/run/sockets'
-    command: 'celery -A matrix_stats worker -l info -E --concurrency 1 -Ofair --logfile=/logs/worker-default%I.log'
+    command: 'celery -A matrix_stats worker -l info -E -Q control --concurrency 1 -Ofair --logfile=/logs/worker-default.log'
+    depends_on:
+      - redis
+
+  celery_worker_service:
+    image: 'websource'
+    environment:
+      - C_FORCE_ROOT=true
+    env_file:
+      - ./source/matrix_stats/env/prod
+    volumes:
+      - 'mediadata:/media'
+      - 'staticdata:/static'
+      - 'logsdata:/logs'
+      - 'storagedata:/storage'
+      - 'sockets:/var/run/sockets'
+    command: 'celery -A matrix_stats worker -l info -E -Q service --concurrency 2 -Ofair --logfile=/logs/worker-service.log'
+    depends_on:
+      - redis
+
+  celery_worker_sync:
+    image: 'websource'
+    environment:
+      - C_FORCE_ROOT=true
+    env_file:
+      - ./source/matrix_stats/env/prod
+    volumes:
+      - 'mediadata:/media'
+      - 'staticdata:/static'
+      - 'logsdata:/logs'
+      - 'storagedata:/storage'
+      - 'sockets:/var/run/sockets'
+    command: 'celery -A matrix_stats worker -l info -E -Q sync --concurrency 10 -Ofair --logfile=/logs/worker-sync.log'
     depends_on:
       - redis
 
