--- a/docks/redis/redis.conf
+++ b/docks/redis/redis.conf
@@ -559,7 +559,7 @@ slave-priority 100
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
 # maxmemory <bytes>
-maxmemory 1gb
+maxmemory 500mb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select among five behaviors:
