Reduce nginx cache timeout for /homeservers/

--- a/docks/nginx/conf.d/web.conf
+++ b/docks/nginx/conf.d/web.conf
@@ -89,4 +89,8 @@ server {
         proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
 
     }
+
+    location /homeservers/ {
+        proxy_cache_valid 200 1m;
+    }
 }
