--- a/docks/nginx/conf.d/web.conf
+++ b/docks/nginx/conf.d/web.conf
@@ -74,6 +74,19 @@ server {
         break;
     }
 
+    location /homeservers/ {
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_cache STATIC;
+        proxy_cache_valid 200 1m;
+        proxy_cache_key $request_uri;
+        proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        break;
+    }
+
     location / {
         gzip on;
         gunzip on;
@@ -88,9 +101,5 @@ server {
         proxy_cache_key $request_uri;
         proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
 
-    }
-
-    location /homeservers/ {
-        proxy_cache_valid 200 1m;
     }
 }
